[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lapis.caching"
version = "0.1.0"
description = "LAPIS extension to simulate caching"
authors = ["Eileen Kuehn <eileen.kuehn@kit.edu>", "Max Fischer <max.fischer@kit.edu"]
maintainers = ["MatterMiners <matterminers@lists.kit.edu>"]
license = "MIT"
readme = "README.rst"
homepage = "https://matterminers.github.io"
repository = "https://github.com/MatterMiners/lapis.caching"
keywords = ["caching", "simulation", "opportunistic", "scheduling", "scheduler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
]
packages = [
    { include = "lapis" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
lapis-sim = "^0.4.1"
classad = "^0.4.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = ">= 4.3.0"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
black = { version = "^20.8b1", markers = "implementation_name=='cpython'" }
pre-commit = "^2.9.3"
