[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lapis.caching"
version = "0.1.0"
description = "LAPIS extension to simulate caching"
authors = ["Eileen Kuehn <eileen.kuehn@kit.edu>", "Max Fischer <max.fischer@kit.edu"]
maintainers = ["MatterMiners <matterminers@lists.kit.edu>"]
license = "MIT"
readme = "README.rst"
homepage = "https://matterminers.github.io"
repository = "https://github.com/MatterMiners/lapis.caching"
keywords = ["caching", "simulation", "opportunistic", "scheduling", "scheduler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
]
packages = [
    { include = "lapis" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
lapis-sim = { git = "https://github.com/MatterMiners/lapis.git", branch = "cleanup/caching" }
classad = "^0.4.0"

Sphinx = { version = "^3.3.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }
sphinxcontrib-contentui = { version = "^0.2.5", optional = true }
sphinx-click = { version = "^2.5.0", optional = true }
change-log = { version = "^0.2.0", optional = true }

pytest = { version = ">= 4.3.0", optional = true }
flake8 = { version = "^3.8.4", optional = true }
flake8-bugbear = { version = "^20.11.1", optional = true }
black = { version = "^20.8b1", markers = "implementation_name=='cpython'", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[tool.poetry.extras]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-contentui",
    "sphinx-click",
    "change-log",
]
test = [
    "pytest",
    "flake8",
    "flake8-bugbear",
    "black"
]
